gitops/wind-kafka/apps/consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wind-kafka-consumer
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"wind-kafka-consumer:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"app\")].image"}]'
spec:
  replicas: 20
  selector:
    matchLabels:
      app: wind-kafka-consumer
  template:
    metadata:
      labels:
        app: wind-kafka-consumer
    spec:
      containers:
        - name: app
          image: ' '
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: wind-kafka-consumer
spec:
  selector:
    app: wind-kafka-consumer
  ports:
    - name: http
      port: 8084
      targetPort: http
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wind-kafka-consumer
spec:
  to:
    kind: Service
    name: wind-kafka-consumer
  port:
    targetPort: http
